@@ -4,7 +4,8 @@ Changelog
 1.4.4 (xx.xx.2016)
 ~~~~~~~~~~~~~~~~~~
 
-* The `wagtailuserbar` template tag now gracefully handles situations where the `request` object is not in the template context (Matt Westcott)
+ * Fix: The `wagtailuserbar` template tag now gracefully handles situations where the `request` object is not in the template context (Matt Westcott)
+ * Fix: Meta classes on StreamField blocks now handle multiple inheritance correctly (Tim Heap)
 
 
 1.4.3 (04.04.2016)
